--- a/#src/scss/cart.scss
+++ b/#src/scss/cart.scss
@@ -65,7 +65,7 @@
 	min-height: calc(100vh - ($headerHeight + $footerHeight));
 }
 //todo ------------------------ Components -------------------------------------
-@import 'components/loading_4';
+// @import 'components/loading_4';
 @import 'components/bem-block';
 @import 'components/burger-side';
 @import 'components/burger-top-menu';
