--- a/#src/scss/_reset.scss
+++ b/#src/scss/_reset.scss
@@ -50,13 +50,15 @@ a:visited {
 }
 
 input,
-button {
+button,
+textarea {
 	border: none;
 }
 
 a:focus,
 a:active,
-input:focus {
+input:focus,
+textarea:focus {
 	outline: none;
 }
 
