--- a/#src/scss/page-block/page-mainslide.scss
+++ b/#src/scss/page-block/page-mainslide.scss
@@ -103,6 +103,7 @@
 }
 
 .content-mainslide {
+	min-height: 135px;
 	margin: 18px 0 50px 35px;
 	@include _920-1170 {
 		margin-top: calc(10px + (18 - 10) * ((100vw - 920px) / (1170 - 920)));
@@ -158,7 +159,7 @@
 		}
 
 		@include _920 {
-			margin-bottom: calc(0px + (15 - 0) * ((100vw - 490px) / (920 - 490)));
+			margin-bottom: calc(5px + (15 - 5) * ((100vw - 490px) / (920 - 490)));
 			font-size: calc(12px + (15 - 12) * ((100vw - 490px) / (920 - 490)));
 			line-height: calc(16px + (24 - 16) * ((100vw - 490px) / (920 - 490)));
 		}
@@ -196,12 +197,15 @@
 	// .content-mainslider__price
 	&__price {
 		font: {
-			size: 300%; /* 36/12 */
+			size: 3.6rem; /* 36/12 */
 			weight: 900;
+		}
+		@include _425 {
+			font-size: 2.4rem;
 		}
 
 		margin-bottom: 20px;
-		color: #ffffff;
+		color: #f65738;
 		span {
 			text-transform: uppercase;
 		}
@@ -209,9 +213,12 @@
 			margin-bottom: calc(10px + (20 - 10) * ((100vw - 920px) / (1170 - 920)));
 			font-size: calc(28px + (36 - 28) * ((100vw - 920px) / (1170 - 920)));
 		}
-		@include _920 {
+		@include _490-920 {
 			font-size: calc(20px + (36 - 20) * ((100vw - 490px) / (920 - 490)));
 			margin-bottom: calc(10px + (20 - 10) * ((100vw - 490px) / (920 - 490)));
+		}
+		@include _490 {
+			margin-bottom: 5px;
 		}
 	}
 
@@ -236,11 +243,11 @@
 		}
 		cursor: pointer;
 		background-color: rgba(0, 0, 0, 0);
-		border: 3px solid #fff;
+		border: 3px solid #f65738;
 		border-radius: 33px;
 		// line-height: 200%; /* 24/12 */
 		text-transform: uppercase;
-		color: #fff;
+		color: #f65738;
 		transition: transform 0.3s ease 0s;
 	}
 }
