--- a/#src/scss/page-block/page-product.scss
+++ b/#src/scss/page-block/page-product.scss
@@ -460,10 +460,12 @@
 
 	// .actions-product__new-price
 	&__new-price {
+		display: flex;
 		font-size: 24px;
 		font-weight: 900;
 		color: #333333;
 		.icon-ruble {
+			margin-left: 5px;
 			&::before {
 				font-size: 18px;
 			}
