--- a/#src/scss/page-block/page-cart.scss
+++ b/#src/scss/page-block/page-cart.scss
@@ -453,6 +453,7 @@
 	// .shopping-cart__button
 	&__button {
 		text-align: right;
+		padding-right: 1.5rem;
 		.button {
 			padding: 1rem 2rem;
 			font-size: 1.4rem;
