--- a/#src/scss/page-block/iconstyle.scss
+++ b/#src/scss/page-block/iconstyle.scss
@@ -13,6 +13,20 @@
   font-style: normal;
   font-display: block;
 }
+[class^='icon-']::before,
+[class*=' icon-']::before {
+  font-family: '#{$icomoon-font-family}' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 .icon-phon {
   &:before {
     content: $icon-phon;
