--- a/#src/scss/products.scss
+++ b/#src/scss/products.scss
@@ -20,6 +20,7 @@
 // todo ------------------------- Wrapper --------------------------------------
 // #region
 .wrapper {
+	position: relative;
 	max-width: $maxWidth;
 	min-height: 100vh;
 	margin: 0 auto;
