--- a/#src/scss/_mixins.scss
+++ b/#src/scss/_mixins.scss
@@ -61,24 +61,20 @@
 	align-items: center;
 	justify-content: space-between;
 }
+// -----------------------------------------------------------------------------
 @mixin _1140 {
 	@media (max-width: 1140px) {
 		@content;
 	}
 }
 
+@mixin _1024 {
+	@media (max-width: 1024px) {
+		@content;
+	}
+}
 @mixin _992 {
 	@media (max-width: 992px) {
-		@content;
-	}
-}
-@mixin _970 {
-	@media (max-width: 970px) {
-		@content;
-	}
-}
-@mixin _920-1170 {
-	@media (min-width: 920.98px) and (max-width: 1170px) {
 		@content;
 	}
 }
@@ -89,6 +85,11 @@
 	}
 }
 
+@mixin _920-1170 {
+	@media (min-width: 920.98px) and (max-width: 1170px) {
+		@content;
+	}
+}
 @mixin _690-1140 {
 	@media (min-width: 691px) and (max-width: 1140px) {
 		@content;
@@ -148,12 +149,6 @@
 	}
 }
 
-@mixin _1024 {
-	@media (max-width: 1024px) {
-		@content;
-	}
-}
-
 @mixin _min-1024 {
 	@media (min-width: 1024px) {
 		@content;
@@ -167,12 +162,6 @@
 }
 @mixin _690-920 {
 	@media (min-width: 690.98px) and (max-width: 920px) {
-		@content;
-	}
-}
-
-@mixin _375-920 {
-	@media (min-width: 375.98px) and (max-width: 920px) {
 		@content;
 	}
 }
@@ -195,6 +184,18 @@
 
 @mixin _min-690 {
 	@media (min-width: 690.98px) {
+		@content;
+	}
+}
+
+@mixin _screen-690 {
+	@media screen and (max-width: 690px) {
+		@content;
+	}
+}
+
+@mixin _375-920 {
+	@media (min-width: 375.98px) and (max-width: 920px) {
 		@content;
 	}
 }
