--- a/#src/scss/_reset.scss
+++ b/#src/scss/_reset.scss
@@ -9,7 +9,7 @@ body {
 		weight: 400;
 		family: $font-family;
 	}
-	overflow-x: hidden;
+	// overflow-x: hidden;
 	height: 100%;
 	color: #fff;
 	@include _1024 {
