--- a/#src/scss/page-block/footer.scss
+++ b/#src/scss/page-block/footer.scss
@@ -3,6 +3,7 @@
 
 	// .footer__content
 	&__content {
+		box-shadow: 2px 3px 8px 1px #00000086;
 		@include flex-justify-space-between;
 		@include _690 {
 			flex-direction: column;
