--- a/#src/scss/page-block/page-block.scss
+++ b/#src/scss/page-block/page-block.scss
@@ -3,7 +3,8 @@
 
 	// .page__container
 	&__container {
-		margin-bottom: 20px;
+		margin: 5px auto 20px;
+		box-shadow: 2px 3px 8px 1px #00000086;
 	}
 
 	// .page__content
