--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -22,6 +22,7 @@
 // todo ------------------------- Wrapper --------------------------------------
 // #region
 .wrapper {
+	position: relative;
 	max-width: $maxWidth;
 	min-height: 100vh;
 	margin: 0 auto;
