--- a/#src/scss/catalog.scss
+++ b/#src/scss/catalog.scss
@@ -62,8 +62,9 @@
 @import 'page-block/header';
 @import 'page-block/page-block';
 @import 'page-block/page-sidebar';
-@import 'page-block/page-search';
 @import 'page-block/page-catalog';
+@import 'page-block/page-search';
+@import 'page-block/page-breadcrumbs';
 @import 'page-block/items-list';
 @import 'page-block/page-products';
 @import 'page-block/items-products';
