--- a/#src/scss/slide/swiper.scss
+++ b/#src/scss/slide/swiper.scss
@@ -33,6 +33,7 @@ swiper-container {
 	flex-direction: column;
 }
 .swiper-wrapper {
+	cursor: grab;
 	position: relative;
 	width: 100%;
 	height: 100%;
@@ -45,6 +46,9 @@ swiper-container {
 		initial
 	);
 	box-sizing: content-box;
+	&:active {
+		cursor: grabbing;
+	}
 }
 .swiper-android .swiper-slide,
 .swiper-wrapper {
