--- a/#src/html/components/js.html
+++ b/#src/html/components/js.html
@@ -1,3 +1,3 @@
-<script defer="defer" type="text/javascript" src="js/app-min.js"></script>
+<script async="defer" type="text/javascript" src="js/app-min.js"></script>
 <script defer="defer" type="text/javascript" src="js/main-min.js"></script>
 <script defer="defer" type="text/javascript" src="js/index-min.js"></script>
