--- a/#src/html/components/loading_1.html
+++ b/#src/html/components/loading_1.html
@@ -1,5 +1,5 @@
-<div class="loading">
-	<div class="loading__loader">
-		<img alt="Загрузка страницы" src="img/Preloader_2.gif"/>
-	</div>
+<div class="preloader">
+	<!-- <div class="loading__loader"> -->
+	<img alt="Загрузка страницы" src="img/Preloader_2.gif" />
+	<!-- </div> -->
 </div>
