--- a/#src/html/components/loading_2.html
+++ b/#src/html/components/loading_2.html
@@ -1,3 +1,7 @@
 <div class="preloader">
-	<div class="preloader-2"></div>
+	<div class="loader">
+		<div class="inner one"></div>
+		<div class="inner two"></div>
+		<div class="inner three"></div>
+	</div>
 </div>
