--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -54,7 +54,7 @@
 	min-height: calc(100vh - ($headerHeight + $footerHeight));
 }
 //todo ------------------------ Components -------------------------------------
-@import 'components/loading_4';
+@import 'components/loading_2.scss';
 @import 'components/bem-block';
 @import 'components/burger-side';
 // todo ----------------------- Page Blocks ------------------------------------
