--- a/#src/html/components/head.html
+++ b/#src/html/components/head.html
@@ -5,6 +5,7 @@
 	<meta content="Краткое описание документа." name="description">
 	<meta content="keywords-ключевые слова для поиска" name="keywords">
 	<link rel="icon" href="img/icons/clearfit_title.png" type="image/icon" />
-	@@include("app-catalog.html")
+	<link href="css/style.min.css" rel="stylesheet" type="text/css" />
+	@@include("js.html")
 	<title>@@title</title>
 </head>
