--- a/#src/scss/slide/swiper-vars.scss
+++ b/#src/scss/slide/swiper-vars.scss
@@ -1,1 +1,7 @@
-$swiperThemeColor: #f68038 !default;
+$themeColor: #f68038 !default;
+:root {
+	--swiper-navigation-size: 44px;
+	--swiper-navigation-color: #068292;
+	--swiper-pagination-color: #567b80;
+	--swiper-theme-color: #007aff;
+}
