--- a/#src/html/layouts/head-cart.html
+++ b/#src/html/layouts/head-cart.html
@@ -6,6 +6,8 @@
 	<meta content="keywords-ключевые слова для поиска" name="keywords">
 	<link rel="icon" href="img/icons/clearfit_title.png" type="image/icon" />
 	<link href="css/cart.min.css" rel="stylesheet" type="text/css" />
-	@@include("js-cart.html")
+	<script defer="defer" type="text/javascript" src="js/app.min.js"></script>
+	<script defer="defer" type="text/javascript" src="js/main.min.js"></script>
+	<script defer="defer" type="text/javascript" src="js/cart.min.js"></script>
 	<title>@@title</title>
 </head>
