--- a/#src/html/layouts/head-products.html
+++ b/#src/html/layouts/head-products.html
@@ -5,7 +5,9 @@
 	<meta content="Краткое описание документа." name="description">
 	<meta content="keywords-ключевые слова для поиска" name="keywords">
 	<link rel="icon" href="img/icons/clearfit_title.png" type="image/icon" />
-	<link href="css/style.min.css" rel="stylesheet" type="text/css" />
-	@@include("js.html")
+	<link href="css/products.min.css" rel="stylesheet" type="text/css" />
+	<script defer="defer" type="text/javascript" src="js/app.min.js"></script>
+	<script defer="defer" type="text/javascript" src="js/main.min.js"></script>
+	<script defer="defer" type="text/javascript" src="js/products.min.js"></script>
 	<title>@@title</title>
 </head>
