--- a/#src/scss/page-block/page-text.scss
+++ b/#src/scss/page-block/page-text.scss
@@ -39,7 +39,9 @@
 		flex: 0 1 50%;
 		font: {
 			family: Roboto;
+			size: 12px;
 		}
+		text-align: justify;
 		line-height: 20px;
 		letter-spacing: 0.025em;
 
