--- a/#src/scss/page-block/header.scss
+++ b/#src/scss/page-block/header.scss
@@ -98,10 +98,9 @@
 		}
 		img {
 			@include _920 {
-				width: 90%;
-				min-width: 5rem;
+				min-width: 100%;
 				height: 100%;
-				object-fit: cover;
+				object-fit: contain;
 			}
 		}
 	}
