--- a/#src/scss/_reset.scss
+++ b/#src/scss/_reset.scss
@@ -46,7 +46,7 @@ a:hover {
 
 a:visited {
 	vertical-align: middle;
-	-text-emphasis-style: none;
+	text-emphasis-style: none;
 }
 
 input,
@@ -137,3 +137,4 @@ h6 {
 		);
 	}
 }
+// * {border: 0px solid green !important;}
